feat: add 3 badge reset APIs
